Bug 258599 - REGRESSION (260897@main): Occasional crash when right clicking an image
Summary: REGRESSION (260897@main): Occasional crash when right clicking an image
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Aditya Keerthi
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-27 20:11 PDT by Aditya Keerthi
Modified: 2023-06-28 09:13 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aditya Keerthi 2023-06-27 20:11:51 PDT
rdar://110708014
Comment 1 Aditya Keerthi 2023-06-27 20:20:34 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15355
Comment 2 EWS 2023-06-28 09:13:55 PDT
Committed 265582@main (16e3d68d600a): <https://commits.webkit.org/265582@main>

Reviewed commits have been landed. Closing PR #15355 and removing active labels.