REGRESSION (260897@main): Occasional crash when right clicking an image https://bugs.webkit.org/show_bug.cgi?id=258599 rdar://110708014

Reviewed by Wenson Hsieh.

260897@main introduced additional asynchronicity when generating context menu
information, to perform QR code detection. Consequently, it is possible for
the `WebPageProxy` to be destroyed prior to finishing detection. Add a
null-check for `WebContextMenuProxy::page` to avoid crashes in this scenario.

* Source/WebKit/UIProcess/WebContextMenuProxy.cpp:
(WebKit::WebContextMenuProxy::show):
* Tools/TestWebKitAPI/Tests/mac/ContextMenuTests.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/265582@main