Source/WebKit/UIProcess/WebContextMenuProxy.cpp
@@ -55,9 +55,13 @@ Vector<Ref<WebContextMenuItem>> WebContextMenuProxy::proposedItems() const
 void WebContextMenuProxy::show()
 {
     ASSERT(m_context.webHitTestResultData());
-    
+
+    RefPtr page = this->page();
+    if (!page)
+        return;
+
     m_contextMenuListener = WebContextMenuListenerProxy::create(*this);
-    page()->contextMenuClient().getContextMenuFromProposedMenu(*page(), proposedItems(), *m_contextMenuListener, m_context.webHitTestResultData().value(), page()->process().transformHandlesToObjects(m_userData.object()).get());
+    page->contextMenuClient().getContextMenuFromProposedMenu(*page, proposedItems(), *m_contextMenuListener, m_context.webHitTestResultData().value(), page->process().transformHandlesToObjects(m_userData.object()).get());
 }
 
 void WebContextMenuProxy::useContextMenuItems(Vector<Ref<WebContextMenuItem>>&& items)
